<resources>
    <string name="app_name">PhotoPet</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="account">Do not have an account? </string>
    <string name="singup">Sign up</string>
    <string name="title">PhotoPet</string>
    <string name="btnSignin">Sign in</string>
    <string name="btnSignup">Sign Up</string>
    <string name="btnEdit">Apply changes</string>

    <!--Registro-->
    <string name="namesReg">Name(s)</string>
    <string name="lastReg">Last names</string>
    <string name="descReg">Description</string>
    <string name="phoneReg">Telephone number</string>
    <string name="photoRegister">Choose a photo</string>

    <string name="deleteAccount">Delete account</string>
    <string name="imageSizeErrHeader">Image Error</string>
    <string name="imageSizeErr">Number of images that exceeded the expected size (7MB) : </string>
    <string name="deletePost">Delete post</string>
    <string name="dialogDeleteAccountMessage">Are you sure you want to delete your account?</string>
    <string name="dialogDeletePostMessage">Are you sure you want to delete this post?</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="likeMessage">You like this post</string>
    <string name="dislikeMessage">You no longer like this post</string>







    <string name="hometab">Home</string>
    <string name="searchtab">Search</string>
    <string name="profiletab">Profile</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Suspendisse dignissim.Suspendisse dignissim.</string>
    <string name="SearchTitleradios">Search by: </string>
    <string name="Searchradio1">Description</string>
    <string name="Searchradio2">Tag</string>
    <string name="Author">Author: </string>

    <string name="Orderadio1">New</string>
    <string name="Orderradio2">Popular</string>
    <string name="Orderradio3">Old</string>
    <string name="Order">Order by: </string>

    <string name="desc">Description: </string>
    <string name="phone">Phone: </string>

    <string name="edit">Edit </string>
    <string name="close">Sign off</string>

    <string name="CreatePost">Create Post</string>
    <string name="Post">Post</string>
    <string name="NoDescImageMessage">This image has no description</string>
    <string name="Tags">Tags: </string>

    <string name="btnDeleteImage">Delete current image</string>
    <string name="btnTagsPost"> Post Tags</string>
    <string name="btnPublicar">Publish</string>
    <string name="searchTag">Search tag</string>
    <string name="createTag">Create tag</string>
    <string name="tagNameErr">There is already a tag with that name.</string>
    <string name="imagesOverloadErr">Maximum images uploaded. You can delete previously added images.</string>
    <string name="postDescEmptyErr">The post needs a description.</string>
    <string name="postEmptyErr">The post needs at least one image.</string>
    <string name="postEmptyTagErr">The post needs at least one tag.</string>
    <string name="emptyDescImage">There\'s is not a description for this image.</string>


    <string name="addimage">Add Image</string>
    <string name="descpost">Describe the publication</string>
    <string name="descimage">Describe the current image</string>

    <string name="myPosts">My posts</string>
    <string name="myLikes">My likes</string>

    <string name="taglist">Tag\'s list</string>
    <string name="goBack">Go back</string>
    <string name="emptyDesc">There is no description</string>
    <string name="emptyPhone">There is no phone</string>
    <string name="save">Save</string>
    <string name="DescSaved">Description Saved</string>


    <!--Validaciones-->
    <string name="Err23000_R">There\'s already an account with that email.</string>
    <string name="Err0_G">An error has occurred, please try again.</string>
    <string name="Loading">Loading…</string>

    <string name="ErrEmpty_L">Please introduce a value</string>
    <string name="ErrData">Error, please check your data</string>
    <string name="ErrEmail">Email not valid</string>
    <string name="ErrPass">Your password must be at least 8 characters long</string>
    <string name="ErrPhone">Must be 10 numbers</string>
    <string name="ErrCharacter">The password must contain:"\n"a number"\n"a special character: @#$%^+="\n"an uppercase and a lowercase </string>
    <string name="InternetErr">Please check your internet connection</string>


    <!--Content label-->
    <string name="nextImage">Next Image</string>
    <string name="prevImage">Previous Image</string>
    <string name="postImageContent">Current post image</string>
    <string name="imageCount">0/10</string>
    <string name="addimageButton">Add image button</string>
    <string name="appLogo">PhotoPet Logo</string>
    <string name="delete">Delete</string>
    <string name="searchByTag">Search by tag</string>
    <string name="searchByDesc">Search by description</string>
    <string name="LikeButton">Press to like</string>
    <string name="DislikeButton">Press to dislike</string>
    <string name="imageCircleShowUserPosts">Press to access this user\'s posts.</string>



    <string name="LogInErr">Some of the data entered is wrong</string>
    <string name="HeaderEditPost">Edit Post</string>
    <string name="CheckBoxPass">Edit Password?</string>



</resources>