<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/cardHeaderPost"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/BtnbackPost"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:background="@color/white"
                android:contentDescription="@string/goBack"
                app:srcCompat="@drawable/ic_arrow_back_24"
                app:tint="@color/textColor" />

            <TextView
                android:id="@+id/TitlePostPubication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:textStyle="bold"
                android:text="@string/Post"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeaderPost"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:background="@color/backgroundPet">


            <ImageView
                android:id="@+id/imagesPost"
                android:layout_width="410dp"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/postImageContent"
                android:maxHeight="400dp"
                android:minHeight="300dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DescPost"
                app:srcCompat="@drawable/picture" />


            <TextView
                android:id="@+id/txtCountPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagesPost" />

            <ImageButton
                android:id="@+id/btnRightPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:backgroundTint="@color/greenPet"
                android:contentDescription="@string/nextImage"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtCountPost"
                app:layout_constraintTop_toBottomOf="@+id/imagesPost"
                app:srcCompat="@drawable/ic_arrow_forward_24"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/btnLeftPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/greenPet"
                android:contentDescription="@string/prevImage"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/txtCountPost"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagesPost"
                app:srcCompat="@drawable/ic_arrow_back_24"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfilePost"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/imageCircleShowUserPosts"
                android:src="@drawable/ic_person_24"
                app:civ_border_color="@color/textColor"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtNamePost"
                app:layout_constraintEnd_toStartOf="@+id/txtNamePost"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtNamePost"
                tools:srcCompat="@drawable/ic_person_24" />

            <TextView
                android:id="@+id/txtNamePost"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/BtnLike"
                app:layout_constraintStart_toEndOf="@+id/imageProfilePost"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/DescPost"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/Lorem"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageProfilePost" />

            <TextView
                android:id="@+id/DescImagePost"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="175dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="176dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/Lorem"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toTopOf="@+id/BtnModif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCountPost" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/BtnLike"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/LikeButton"
                android:scaleType="centerCrop"
                android:scaleX="2"
                android:scaleY="2"
                app:layout_constraintBottom_toBottomOf="@+id/txtNamePost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtNamePost"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twitter_like" />

            <Button
                android:id="@+id/BtnModif"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_green"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DescImagePost" />

            <TextView
                android:id="@+id/txtTagsPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/Tags"
                app:layout_constraintBottom_toTopOf="@+id/imageProfilePost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>