<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background002"
    tools:context=".controller.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="244dp"
                    android:layout_height="209dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/appLogo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_iconcamera2" />

                <Button
                    android:id="@+id/btnRegistrarse"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/rounded_button_blue"
                    android:text="@string/btnSignup"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp"
                    android:background="@drawable/rounded_button_green"
                    android:text="@string/btnSignin"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    tools:ignore="MissingConstraints,TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <!-- android:backgroundTint="@color/bluePet" -->

</androidx.constraintlayout.widget.ConstraintLayout>