<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/RelLay_Dialog"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@null"
    android:gravity="center">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_border"
            android:gravity="center_horizontal"
            android:keyboardNavigationCluster="false"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivImageUserShowPost"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    app:civ_border_color="@color/textColor"
                    app:civ_border_width="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvNameUserShowPost"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    android:gravity="center"
                    android:text="@string/Lorem"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivImageUserShowPost" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/desc"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNameUserShowPost" />

                <TextView
                    android:id="@+id/tvDescUserShowPost"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17"
                    tools:text="@string/Lorem" />

                <TextView
                    android:id="@+id/tvPhoneUserShowPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    app:layout_constraintBottom_toTopOf="@+id/rvShowUserPosts"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19"
                    tools:text="00000000" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescUserShowPost" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShowUserPosts"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_marginTop="16dp"
                    android:foregroundGravity="center_horizontal"
                    android:background="@drawable/drawable_interior_border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhoneUserShowPost"
                    tools:listitem="@layout/card_publication_smaller">

                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/btn_goBackDialog"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_button_black"
                    android:text="@string/goBack"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvShowUserPosts" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>



</RelativeLayout>